# GDALRasterConverter

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  vcpkg.json
.github/workflows/: cmake-single-platform.yml
